--- a/package.json
+++ b/package.json
@@ -10,10 +10,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@mui/x-date-pickers": "^7.11.0",
+    "@react-pdf/renderer": "^3.4.4",
     "@reduxjs/toolkit": "^2.2.5",
+    "@stripe/react-stripe-js": "^2.7.3",
+    "@stripe/stripe-js": "^4.1.0",
     "axios": "^1.7.2",
+    "dayjs": "^1.11.12",
+    "js-cookie": "^3.0.5",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.52.1",
+    "react-pdf": "^9.1.0",
+    "react-razorpay": "^2.0.1",
     "react-redux": "^9.1.2",
     "react-router-dom": "^6.23.1"
   },
