--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,8 @@
 {
   "rewrites": [
     {
-      "source": "/api/(.*)",
-      "destination": "https://txzazouq7a.execute-api.ap-south-1.amazonaws.com/production"
-    },
-    {
-      "source": "/test",
-      "destination": "https://txzazouq7a.execute-api.ap-south-1.amazonaws.com/production"
+      "source": "/api/:path",
+      "destination": "https://txzazouq7a.execute-api.ap-south-1.amazonaws.com/production/:path"
     }
   ]
 }
