--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,9 @@
 {
-    "cleanUrls":true,
+  "cleanUrls": true,
   "rewrites": [
     {
-      "source": "/api/:path",
-      "destination": "https://txzazouq7a.execute-api.ap-south-1.amazonaws.com/production/api/:path"
+      "source": "/carex/:path",
+      "destination": "https://txzazouq7a.execute-api.ap-south-1.amazonaws.com/production/carex/:path"
     }
   ]
 }
